# montecarlo-c4

./: LICENSE  README.md  c4-board.hs  montecarlo-c4.cabal
src/: Bench.hs  Board.hs  EvalChunk.hs  EvalPar.hs  EvalParOld.hs  EvalSeq.hs  Main.hs  Play.hs
