cabal-version:       2.4
name:                montecarlo-c4
version:             0.1.0.0
build-type:          Simple

executable test-c4
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , random
                     , deepseq
                     , parallel
  ghc-options:         -O2 -threaded -rtsopts
  default-language:    Haskell2010
