cabal-version:       2.4
name:                montecarlo-c4
version:             0.1.0.0
build-type:          Simple

executable test-c4
    main-is:             Main.hs
    other-modules:       Board
    hs-source-dirs:      src
    ghc-options:         -Wall
    build-depends:       base >=4.7 && <5
    default-language:    Haskell2010
