cabal-version:       2.4
name:                montecarlo-c4
version:             0.1.0.0
build-type:          Simple

executable test-c4
    main-is: Main.hs
    other-modules:
        Board
        EvalPar
    hs-source-dirs: src
    ghc-options: -Wall -threaded -rtsopts -O2
    build-depends:
          base >=4.7 && <5
        , random
        , parallel
        , deepseq
    default-language:    Haskell2010

executable benchmark
    main-is: Bench.hs
    other-modules:
        Board
        EvalSeq
        EvalPar
        EvalChunk
    hs-source-dirs: src
    ghc-options: -Wall -threaded -rtsopts -O2
    build-depends:
          base >=4.7 && <5
        , random
        , parallel
        , deepseq
        , time
    default-language:    Haskell2010
